[gd_scene load_steps=12 format=2]

[ext_resource path="res://Dialogue/StartTextLogic.gd" type="Script" id=1]
[ext_resource path="res://Dialogue/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets_Audio/Radar_Menu.mp3" type="AudioStream" id=3]
[ext_resource path="res://ButtonClickAudio.gd" type="Script" id=4]
[ext_resource path="res://assets_Audio/ButtonDown.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
size_flags_stretch_ratio = 5.0
custom_colors/font_color = Color( 0.0431373, 0.560784, 0.105882, 0.956863 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
script = ExtResource( 1 )

[node name="Letter_Timer" type="Timer" parent="MarginContainer/Panel/Label"]

[node name="message_Timer" type="Timer" parent="MarginContainer/Panel/Label"]

[node name="Skip" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_bottom = 52.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "SKIP"

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -103.0
margin_right = 47.0
margin_bottom = -51.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "CONTINUE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 4.0
script = ExtResource( 4 )

[connection signal="timeout" from="MarginContainer/Panel/Label/Letter_Timer" to="MarginContainer/Panel/Label" method="_on_Letter_Timer_timeout"]
[connection signal="timeout" from="MarginContainer/Panel/Label/message_Timer" to="MarginContainer/Panel/Label" method="_on_message_Timer_timeout"]
[connection signal="button_down" from="Skip" to="ButtonClickAudio" method="_on_Skip_button_down"]
[connection signal="pressed" from="Skip" to="MarginContainer/Panel/Label" method="_on_Button_pressed"]
[connection signal="pressed" from="Continue" to="MarginContainer/Panel/Label" method="_on_Continue_pressed"]
