[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets_2D/futura/Futura Medium Italic font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets_2D/futura/futuraTHEME.tres" type="Theme" id=2]
[ext_resource path="res://assets_Audio/ButtonHover.wav" type="AudioStream" id=3]
[ext_resource path="res://World/PAUSE_SCREEN.gd" type="Script" id=4]
[ext_resource path="res://ButtonClickAudio.gd" type="Script" id=5]
[ext_resource path="res://ButtonPlayEffect.gd" type="Script" id=6]
[ext_resource path="res://assets_Audio/ButtonDown.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

uniform float blur: hint_range(0.0, 2.5);
uniform float brightness: hint_range(0.0, 1.0);

void fragment(){
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR.rgb *= brightness;
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/blur = 0.0
shader_param/brightness = 1.0

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.121569 )
shadow_size = 10
anti_aliasing_size = 2.236

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.462745, 0.184314, 0.184314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.313726, 0.0980392, 0.0980392, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.419608, 0.188235, 0.188235, 1 )

[sub_resource type="ShaderMaterial" id=11]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.313726, 0.313726, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.215686, 0.215686, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.27451, 0.27451, 0.313726, 1 )

[sub_resource type="Animation" id=13]
resource_name = "New Anim"

[sub_resource type="Animation" id=14]
resource_name = "PAUSE"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ 0.0, 2.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ 1.0, 0.9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "UNPAUSE"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="PAUSE_MENU" type="ColorRect"]
pause_mode = 2
material = SubResource( 18 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
self_modulate = Color( 0, 0, 0, 0.215686 )
margin_left = 256.0
margin_top = 172.0
margin_right = 768.0
margin_bottom = 428.0
rect_min_size = Vector2( 512, 256 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_right = 512.0
margin_bottom = 256.0
custom_constants/margin_right = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 61.0
theme = ExtResource( 2 )
text = "GAME PAUSED"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 480.0
margin_bottom = 69.0

[node name="RESUME" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 480.0
margin_bottom = 154.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = SubResource( 3 )
theme_type_variation = "FUTURA SLANT"
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "RESUME"

[node name="QUIT" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource( 11 )
margin_top = 158.0
margin_right = 480.0
margin_bottom = 240.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 10 )
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "UNPAUSE"
"anims/New Anim" = SubResource( 13 )
anims/PAUSE = SubResource( 14 )
anims/RESET = SubResource( 15 )
anims/UNPAUSE = SubResource( 16 )

[node name="ButtonHoverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 6 )

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 4.0
script = ExtResource( 5 )

[connection signal="button_down" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RESUME" to="ButtonClickAudio" method="_on_RESUME_button_down"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RESUME" to="ButtonHoverAudio" method="_on_RESUME_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RESUME" to="." method="_on_RESUME_pressed"]
[connection signal="button_down" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QUIT" to="ButtonClickAudio" method="_on_pQUIT_button_down"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QUIT" to="ButtonHoverAudio" method="_on_pQUIT_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
